# adaptive-hrc-safety-system

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: experiment_plan.md  memo-yizhe-sem2.md
docs/design/: optitrack-bridge.md  sem2-redesign.md
docs/ethics/: skeleton.md
paper/: main.tex  refs.bib
paper/tables/: ablation.tex  three_rung.tex
scripts/: demo_ursim.py  make_paper_tables.py  replay.py  run_simulation.py
sim/ursim/: docker-compose.yml  panel_cycle.script
src/hrc_safety/: __init__.py  analysis.py  config.py  envelope.py  features.py  horizon.py  logging_schema.py  metrics.py  panel_cycle.py  prediction.py  zones.py
src/hrc_safety/controllers/: __init__.py  controllers.py
src/hrc_safety/lhmm/: __init__.py  lower.py  upper.py
src/hrc_safety/robot/: __init__.py  interface.py
src/hrc_safety/sim/: __init__.py  runner.py  scenario.py
tests/: test_core.py
