[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrc-safety"
version = "0.1.0"
description = "Comparing Static and Adaptive Safety Logic in Human-Robot Ceiling Panel Installation (Monash FYP 2026)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Wu" },
    { name = "Siniakov" },
    { name = "Magila" },
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.6",
]
robot = [
    "ur-rtde>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
